--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Yew App</title>
         <link data-trunk rel="copy-dir" href="./static">
+        <link data-trunk rel="css" href="style.css"/>
     </head>
     <body>
     </body>
